--- a/public/pairing.html
+++ b/public/pairing.html
@@ -4,27 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pairing Form</title>
+    <style>@import url("pairing.css");</style>
 </head>
 <body>
-    <h1>Pairing avec un serveur SSH</h1>
-    <form id="pairingForm">
-        <label for="ip">Adresse IP du serveur:</label><br>
-        <input type="text" id="ip" name="ip" required><br><br>
+    <div class="container">
+        <h1>Pairing avec un serveur SSH</h1>
+        <form id="pairingForm">
+            <!-- IP Address -->
+            <label for="ip">Adresse IP du serveur:</label>
+            <input type="text" id="ip" name="ip" 
+                   placeholder="142.16.102.35"
+                   pattern="^(localhost|((25[0-5]|(2[0-4]|1\d|[1-9]|)\d)\.?\b){4}|(([a-zA-Z0-9-]+\.)+[a-zA-Z]{2,}))$"
+                   title="Format IPv4 (192.168.1.1)"
+                   required>
 
-        <label for="adminUser">Nom d'utilisateur admin:</label><br>
-        <input type="text" id="adminUser" name="adminUser" required><br><br>
+            <!-- Admin User -->
+            <label for="adminUser">Nom d'utilisateur admin:</label>
+            <input type="text" id="adminUser" name="adminUser"
+                   placeholder="admin"
+                   pattern="^[a-z_][a-z0-9_-]{0,31}$"
+                   title="Un nom d'utilisateur valide avec les droits admin"
+                   required>
 
-        <label for="adminPass">Mot de passe admin, ou clé publique</label><br>
-        <input type="password" id="adminPass" name="adminPass" required><br><br>
+            <!-- Admin Pass/Key -->
+            <label for="adminPass">Mot de passe admin ou clé publique</label>
+            <input type="password" id="adminPass" name="adminPass" 
+                   placeholder="•••••••• ou ssh-rsa AAAA..."
+                   title="un Mdp ou une clé publique ssh">
 
-        <label for="configName">Nom de la configuration:</label><br>
-        <input type="text" id="configName" name="configName" value="test"><br><br>
-
-        <button type="submit">connecter</button>
-    </form>
-
-    <div id="response"></div>
-
+            <!-- Config Name -->
+            <label for="configName">Nom de la configuration:</label>
+            <input type="text" id="configName" name="configName"
+                   placeholder="paris_server"
+                   pattern="^[a-zA-Z0-9_-]+$"
+                   title="Lettres, chiffres, tirets et underscores"
+                   value="Srv_Paris"
+                   required>
+            <button type="submit">connecter</button>
+        </form>
+        <pre id="Response"></pre>
+    </div>
     <script>
         document.getElementById('pairingForm').addEventListener('submit', async (event) => {
             event.preventDefault();
@@ -46,11 +65,14 @@
                 });
 
                 const result = await response.json();
-                document.getElementById('response').innerText = JSON.stringify(result, null, 2);
+                const responseElement = document.getElementById('Response');
+                responseElement.style.display = 'block';
+                responseElement.innerText = JSON.stringify(result, null, 2);
             } catch (error) {
-                document.getElementById('response').innerText = `Erreur: ${error.message}`;
+                document.getElementById('Response').innerText = `Erreur: ${error.message}`;
             }
         });
     </script>
+    </div>
 </body>
 </html>
