--- a/public/pairing.html
+++ b/public/pairing.html
@@ -56,7 +56,7 @@
             };
 
             try {
-                const response = await fetch('/api/tunnels/pairing', {
+                const response = await fetch('/api/pairing/plug', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
