--- a/public/bandwidth.html
+++ b/public/bandwidth.html
@@ -41,7 +41,7 @@
             event.preventDefault();
 
             try {
-                const response = await fetch(`/api/tunnels/setBandwidth/${document.getElementById('tunnelId').value}`, {
+                const response = await fetch(`/api/tunnels/Bandwidth/${document.getElementById('tunnelId').value}`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
