feat(UI): front in native web

--- a/public/pairing.html
+++ b/public/pairing.html
@@ -56,7 +56,7 @@
             };
 
             try {
-                const response = await fetch('/api/pairing/plug', {
+                const response = await fetch('/api/v1/pairing/plug', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
