feat(bw): add bw scrolling

--- a/public/index.html
+++ b/public/index.html
@@ -243,7 +243,7 @@
             <!-- Settings Tab -->
             <div class="tab-content hidden" id="settings-tab">
                 <div class="bandwidth-settings">
-                    <h3>Paramètres de bande passante</h3>
+                    <h3>Bande passante</h3>
                     <div class="bandwidth-controls">
                         <div class="bandwidth-control">
                             <label>
